--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- home page  -->
     <section class="home">
-        <div class="btn btn-outline-light p-1 w-75 fs-4 rounded-0 btn-sm btn-outline-danger">
+        <div class="btn btn-outline-light p-1 fs-4 rounded-0 btn-sm btn-outline-danger">
             Make An Appointment
         </div>
         <p class="text-white py-1 fs-6">Call Us: <span class="fw-bold">+1 (78)673 3567</span></p>
