--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container-fluid p-3 p-md-0">
         <div class="header-top d-none d-md-flex justify-content-md-between align-items-md-center px-md-4">
-            <div class="text-white">Location: 76/A, Kings road, NY <span class="text-secondary"> | </span> Mail Us: lawyer76@gmail.com</div>
+            <div class="text-white">Location: 76/A, Kings road, NY <span class="text-secondary mx-2"> | </span> Mail Us: lawyer76@gmail.com</div>
             <div class="svg d-flex text-white">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook m-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -35,13 +35,22 @@
             </div>
         </div>
         <div class="header-content">
-            <div class="row">
-                <div class="col-12 d-md-flex p-md-3 justify-content-md-between align-items-md-center">
+            <div class="row px-3">
+                <div class="top col-12 d-md-flex p-md-3 justify-content-md-between align-items-md-center">
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
-                    <div class="btn btn-outline-danger p-1 fs-4 rounded-0 d-none btn-sm btn-outline-danger d-md-block">
+                    <nav class=" bar d-none">
+                        <ul class="d-flex flex-wrap justify-content-center align-items-center">
+                            <li class="m-3 fs-4"><a href="./index.html">Home</a></li>
+                            <li class="m-3 fs-4"><a href="./Practice Area.html">Practice Area</a></li>
+                            <li class="m-3 fs-4"><a href="./About.html">About</a></li>
+                            <li class="m-3 fs-4"><a href="./blog.html">Blog</a></li>
+                            <li class="m-3 fs-4"><a href="./Contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div class="btn btn-outline-danger p-1 fs-5 rounded-0 d-none btn-sm btn-outline-danger d-md-block">
                         Make An Appointment
                     </div>
-                    <p class="text-dark fs-6 d-none d-md-block">Call Us: <span class="fw-bold text-danger">+1 (78)673 3567</span></p>
+                    <p class=" add text-dark fs-6 d-none d-md-block">Call Us: <span class="fw-bold text-danger">+1 (78)673 3567</span></p>
                 </div>
             </div>
         </div>
@@ -69,7 +78,7 @@
         <div class="home-text text-white d-flex flex-column p-3 w-75">
             <h1>Special Approach Dedicated Attorney</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro repellat aliquid nihil suscipit</p>
-            <div class="btn rounded-0 bg-danger text-white py-4 px-4">Our Practice Area</div>
+            <div class="btn rounded-0 bg-danger text-white py-3 px-4">Our Practice Area</div>
         </div>
     </section>
     
@@ -79,7 +88,7 @@
         <div class="footer-bottom">
             <div class="footer-bottom-1  d-flex flex-column justify-content-center align-items-center p-3">
                 <img src="./IMAGES/logo.png.webp" alt="footer logo">
-                <p class="text-white text-center">
+                <p class="text-white text-center my-4 fs-6">
                     Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation.
                 </p>
                 <nav>
@@ -94,8 +103,8 @@
             </div>
             <div class="footer-bottom-2">
                 <div class="line m-3">
-                    <div class="content">
-                        <div class="text-white">Call Us: +1 (78)673 3567<span class="text-secondary"> | </span> layer76@gmail.com</div>
+                     <div class="content">
+                        <div class="call text-white d-none">Call Us: +1 (78)673 3567<span class="text-secondary mx-2"> | </span> layer76@gmail.com</div>
                         <div class="svg d-flex text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook m-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -122,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom-3 m-2 text-center p-4">
+            <div class="footer-bottom-3 m-2 text-center p-3 fs-6">
                 Copyright &copy;2023 All rights reserved | This template is made with <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart-filled" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M6.979 3.074a6 6 0 0 1 4.988 1.425l.037 .033l.034 -.03a6 6 0 0 1 4.733 -1.44l.246 .036a6 6 0 0 1 3.364 10.008l-.18 .185l-.048 .041l-7.45 7.379a1 1 0 0 1 -1.313 .082l-.094 -.082l-7.493 -7.422a6 6 0 0 1 3.176 -10.215z" stroke-width="0" fill="currentColor"></path>
