--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                  </svg>
             </div>
         </div>
-        <div class="header-content">
+        <div class="header-content position-fixed container-fluid z-1 bg-white top-0">
             <div class="row px-3">
                 <div class="top col-12 d-md-flex p-md-3 justify-content-md-between align-items-md-center">
+
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
                     <nav class=" bar d-none">
                         <ul class="d-flex flex-wrap justify-content-center align-items-center">
@@ -52,25 +53,26 @@
                     </div>
                     <p class=" add text-dark fs-6 d-none d-md-block">Call Us: <span class="fw-bold text-danger">+1 (78)673 3567</span></p>
                 </div>
+                <div class="menu container-fluid d-flex justify-content-end align-items-end p-2 mx-4 overflow-hidden d-lg-none">
+                    <div class="menu-content bg-black text-white rounded">
+                        <p>MENU
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M4 6l16 0"></path>
+                                <path d="M4 12l16 0"></path>
+                                <path d="M4 18l16 0"></path>
+                             </svg>
+                        </p>
+                    </div>
+                </div>
             </div>
+
+
         </div>
     </header>
 
-
     <!-- home page  -->
     <section class="home">
-        <div class="menu container-fluid d-flex justify-content-end align-items-end  p-2 mx-4 overflow-hidden d-lg-none">
-            <div class="menu-content bg-black text-white rounded">
-                <p>MENU
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                        <path d="M4 6l16 0"></path>
-                        <path d="M4 12l16 0"></path>
-                        <path d="M4 18l16 0"></path>
-                     </svg>
-                </p>
-            </div>
-        </div>
         <div class="btn btn-outline-light p-1 fs-4 rounded-0 btn-sm btn-outline-danger d-md-none">
             Make An Appointment
         </div>
