--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <li class="m-3"><a href="./index.html">Home</a></li>
                         <li class="m-3"><a href="./Practice Area.html">Practice Area</a></li>
                         <li class="m-3"><a href="./About.html">About</a></li>
-                        <li class="m-3"><a href="./blog.html">Blog</a></li>
+                        <li class="m-3"><a href="../Main/index.html">Blog</a></li>
                         <li class="m-3"><a href="./Contact.html">Contact</a></li>
                     </ul>
                 </nav>
