about and blog branches merged to main

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
                     <nav class=" bar d-none">
                         <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                            <li class="m-3 fs-5"><a href="./index.html">Home</a></li>
+                            <li class="m-3 fs-5"><a href="./home.html">Home</a></li>
                             <li class="m-3 fs-5"><a href="./Practice Area.html">Practice Area</a></li>
                             <li class="m-3 fs-5"><a href="./About.html">About</a></li>
                             <li class="m-3 fs-5"><a href="./blog.html">Blog</a></li>
@@ -114,7 +114,7 @@
                     <div class="offset-xl-1 col-xl-4 col-lg-6 col-md-9 offset-md-1 col-sm-11">
                         <div class="about-right-cap position-relative">
                             <div class="about-right-img">
-                                <img src="images/about1.jpg.webp" alt="">
+                                <img src="./IMAGES/about1.jpg.webp" alt="">
                             </div>
                             <div class="img-cap position-absolute text-center" style="background: #B40000;">
                                 <span class="text-light lh-1 d-block">15</span>
@@ -136,7 +136,7 @@
 
                         <div class="about-bottom">
                             <span style="color: #2D0000;" class="d-inline-block">Reuben Sandwich <p style="color: #6B5A5A;" class="d-inline-block lh-lg"> - CEO of Colorlib</p></span>
-                            <img src="images/signature.png.webp" alt="" class="d-block">
+                            <img src="./IMAGES/signature.png.webp" alt="" class="d-block">
                         </div>
                     </div>
 
@@ -193,16 +193,16 @@
                             <div class="brand-list position-relative d-block overflow-hidden">
 
                                 <div class="single-brand d-block">
-                                    <img src="images/brand1.png.webp" alt="">
+                                    <img src="./IMAGES/brand1.png.webp" alt="">
                                 </div>
                                 <div class="single-brand d-block">
-                                    <img src="images/brand2.png.webp" alt="">
+                                    <img src="./IMAGES/brand2.png.webp" alt="">
                                 </div>
                                 <div class="single-brand d-block">
-                                    <img src="images/brand3.png.webp" alt="">
+                                    <img src="./IMAGES/brand3.png.webp" alt="">
                                 </div>
                                 <div class="single-brand d-block">
-                                    <img src="images/brand4.png.webp" alt="">
+                                    <img src="./IMAGES/brand4.png.webp" alt="">
                                 </div>
                             </div>
                         </div>
@@ -242,7 +242,7 @@
                                     <div class="founder-caption d-flex align-items-center">
 
                                         <div class="founder-image">
-                                            <img src="images/founder-img.png.webp" alt="">
+                                            <img src="./IMAGES/founder-img.png.webp" alt="">
                                         </div>
 
                                         <div class="founder-text text-start">
@@ -293,7 +293,7 @@
                         <div class="single-services">
 
                             <div class="services-img">
-                                <img src="images/news1.jpg.webp" alt="">
+                                <img src="./IMAGES/news1.jpg.webp" alt="">
                             </div>
 
                             <div class="services-caption position-relative bg-light">
@@ -312,7 +312,7 @@
                         <div class="single-services">
 
                             <div class="services-img">
-                                <img src="images/news1.jpg.webp" alt="">
+                                <img src="./IMAGES/news1.jpg.webp" alt="">
                             </div>
 
                             <div class="services-caption position-relative bg-light">
@@ -352,7 +352,7 @@
                             <div class="consultant-wrapper d-flex align-items-center flex-wrap">
 
                                 <blockquote>
-                                    <img src="images/user.png.webp" alt="">
+                                    <img src="./IMAGES/user.png.webp" alt="">
                                 </blockquote>
 
                                 <div class="consultant-caption">
@@ -398,7 +398,7 @@
                 </p>
                 <nav>
                     <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                        <li class="m-3"><a href="./index.html">Home</a></li>
+                        <li class="m-3"><a href="./home.html">Home</a></li>
                         <li class="m-3"><a href="./Practice Area.html">Practice Area</a></li>
                         <li class="m-3"><a href="./About.html">About</a></li>
                         <li class="m-3"><a href="./blog.html">Blog</a></li>
