--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/blog.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Blog</title>
 </head>
@@ -41,7 +41,7 @@
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
                     <nav class=" bar d-none">
                         <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                            <li class="m-3 fs-5"><a href="./index.html">Home</a></li>
+                            <li class="m-3 fs-5"><a href="./home.html">Home</a></li>
                             <li class="m-3 fs-5"><a href="./Practice Area.html">Practice Area</a></li>
                             <li class="m-3 fs-5"><a href="./About.html">About</a></li>
                             <li class="m-3 fs-5"><a href="./blog.html">Blog</a></li>
@@ -113,7 +113,7 @@
         <div class="blog_left_sidebar">
         <article class="blog_item">
         <div class="blog_item_img">
-        <img class="card-img rounded-0" src="../main/IMAGES/image-1.webp"   alt="">
+        <img class="card-img rounded-0" src="./IMAGES/image-1.webp"   alt="">
 
        <div class="container-2">
         <div class="">
@@ -150,7 +150,7 @@
         </article>
         <article class="blog_item">
         <div class="blog_item_img">
-        <img class="card-img rounded-0" src="../main/IMAGES/image-2.webp" alt="">
+        <img class="card-img rounded-0" src="./IMAGES/image-2.webp" alt="">
         <div class="container-2">
             <a href="#" class="blog_item_date">
                 <h3>15</h3>
@@ -183,7 +183,7 @@
         </article>
         <article class="blog_item">
         <div class="blog_item_img">
-        <img class="card-img rounded-0" src="../main/IMAGES/image-3.webp" alt="">
+        <img class="card-img rounded-0" src="./IMAGES/image-3.webp" alt="">
         <div class="container-2">
             <a href="#" class="blog_item_date">
                 <h3>15</h3>
@@ -216,7 +216,7 @@
         </article>
         <article class="blog_item">
         <div class="blog_item_img">
-        <img class="card-img rounded-0" src="../main/IMAGES/image-4.webp" alt="">
+        <img class="card-img rounded-0" src="./IMAGES/image-4.webp" alt="">
         <div class="container">
             <div class="container-2">
                 <a href="#" class="blog_item_date">
@@ -251,7 +251,7 @@
         </article>
         <article class="blog_item">
         <div class="blog_item_img">
-        <img class="card-img rounded-0" src="../main/IMAGES/image-5.webp" alt="">
+        <img class="card-img rounded-0" src="./IMAGES/image-5.webp" alt="">
         <div class="container-2">
             <a href="#" class="blog_item_date ">
                 <h3>15</h3>
@@ -367,7 +367,7 @@
         <aside class="single_sidebar_widget popular_post_widget">
         <h3 class="widget_title" style="color: #2d2d2d;">Recent Post</h3>
         <div class="media post_item">
-        <img src="../main/IMAGES/post_1.jpg.webp" alt="post">
+        <img src="./IMAGES/post_1.jpg.webp" alt="post">
         <div class="media-body">
         <div class="edit-text">
             <a href="blog_details.html">
@@ -378,7 +378,7 @@
         </div>
         </div>
         <div class="media post_item">
-        <img src="../main/IMAGES/post_2.jpg.webp" alt="post">
+        <img src="./IMAGES/post_2.jpg.webp" alt="post">
         <div class="media-body">
         <div class="edit-text">
             <a href="blog_details.html">
@@ -389,7 +389,7 @@
         </div>
         </div>
         <div class="media post_item">
-        <img src="../main/IMAGES/post_3.jpg.webp" alt="post">
+        <img src="./IMAGES/post_3.jpg.webp" alt="post">
         <div class="media-body">
         <div class="edit-text">
             <a href="blog_details.html">
@@ -400,7 +400,7 @@
         </div>
         </div>
         <div class="media post_item">
-        <img src="../main/IMAGES/post_4.jpg.webp" alt="post">
+        <img src="./IMAGES/post_4.jpg.webp" alt="post">
         <div class="media-body">
         <div class="edit-text">
             <a href="blog_details.html">
@@ -476,7 +476,7 @@
                     <div class="col">
                         <li>
                             <a href="#">
-                            <img class="img-fluid" src="../main/IMAGES/post_5.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_5.jpg.webp" alt="">
                             </a>
                             </li>
                             <br>
@@ -484,7 +484,7 @@
                             <br>
                             <li>
                             <a href="#">
-                            <img class="img-fluid" src="../main/IMAGES/post_7.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_7.jpg.webp" alt="">
                             </a>
                             </li>
                             <br>
@@ -492,26 +492,26 @@
                     <div class="">
                         <li>
                             <a href="#">
-                            <img class="img-fluid" src="asset/post_6.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_6.jpg.webp" alt="">
                             </a>
                             </li>
                     </div>
                     <div class="">
                         <li>
                             <a href="#">
-                            <img class="img-fluid" src="../main/IMAGES/post_8.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_8.jpg.webp" alt="">
                             </a>
                             </li>
                             <br>
                             <li>
                             <a href="#">
-                            <img class="img-fluid" src="../main/IMAGES/post_9.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_9.jpg.webp" alt="">
                             </a>
                             </li>
                             <br>
                             <li>
                             <a href="#">
-                            <img class="img-fluid" src="../main/IMAGES/post_10.jpg.webp" alt="">
+                            <img class="img-fluid" src="./IMAGES/post_10.jpg.webp" alt="">
                             </a>
                             </li>
                     </div>
@@ -565,10 +565,10 @@
                 </p>
                 <nav>
                     <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                        <li class="m-3"><a href="./index.html">Home</a></li>
+                        <li class="m-3"><a href="./home.html">Home</a></li>
                         <li class="m-3"><a href="./Practice Area.html">Practice Area</a></li>
                         <li class="m-3"><a href="./About.html">About</a></li>
-                        <li class="m-3"><a href="../main/index.html">Blog</a></li>
+                        <li class="m-3"><a href="./blog.html">Blog</a></li>
                         <li class="m-3"><a href="./Contact.html">Contact</a></li>
                     </ul>
                 </nav>
