--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
                     <nav class=" bar d-none">
                         <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                            <li class="m-3 fs-5"><a href="./index.html">Home</a></li>
+                            <li class="m-3 fs-5"><a href="./home.html">Home</a></li>
                             <li class="m-3 fs-5"><a href="./Practice Area.html">Practice Area</a></li>
                             <li class="m-3 fs-5"><a href="./About.html">About</a></li>
                             <li class="m-3 fs-5"><a href="./blog.html">Blog</a></li>
@@ -95,10 +95,10 @@
                 </p>
                 <nav>
                     <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                        <li class="m-3"><a href="./index.html">Home</a></li>
+                        <li class="m-3"><a href="./home.html">Home</a></li>
                         <li class="m-3"><a href="./Practice Area.html">Practice Area</a></li>
                         <li class="m-3"><a href="./About.html">About</a></li>
-                        <li class="m-3"><a href="../Main/index.html">Blog</a></li>
+                        <li class="m-3"><a href="./blog.html">Blog</a></li>
                         <li class="m-3"><a href="./Contact.html">Contact</a></li>
                     </ul>
                 </nav>
