--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                     <img src="./IMAGES/logo.png.webp" alt="LOGO">
                     <nav class=" bar d-none">
                         <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                            <li class="m-3 fs-5"><a href="./index.html">Home</a></li>
+                            <li class="m-3 fs-5"><a href="./home.html">Home</a></li>
                             <li class="m-3 fs-5"><a href="./Practice Area.html">Practice Area</a></li>
                             <li class="m-3 fs-5"><a href="./About.html">About</a></li>
                             <li class="m-3 fs-5"><a href="./blog.html">Blog</a></li>
@@ -245,7 +245,7 @@
                 </p>
                 <nav>
                     <ul class="d-flex flex-wrap justify-content-center align-items-center">
-                        <li class="m-3"><a href="./index.html">Home</a></li>
+                        <li class="m-3"><a href="./home.html">Home</a></li>
                         <li class="m-3"><a href="./Practice Area.html">Practice Area</a></li>
                         <li class="m-3"><a href="./About.html">About</a></li>
                         <li class="m-3"><a href="./blog.html">Blog</a></li>
