--- a/blog.html
+++ b/blog.html
@@ -611,5 +611,27 @@
             </div>
         </div>
     </footer>
+
+    <!-- GO TO TOP -->
+
+   <a title="Go to Top" href="#" class="to-top d-block position-fixed text-light text-center text-decoration-none" style=" background: #B40000;">
+    <i class="fa-solid fa-arrow-up"></i>
+</a>
+
+
+
+<script>
+
+    const toTop = document.querySelector(".to-top");
+
+    window.addEventListener("scroll", () => {
+        if(window.pageYOffset > 100) {
+            toTop.classList.add("active");
+        } else {
+            toTop.classList.remove("active");
+        }
+    })
+
+</script>
 </body>
 </html>
